--- a/clock.html
+++ b/clock.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="clock.css">
+    <link rel="stylesheet" href="clook/clock.css">
 </head>
 <body>
     <section class="home">
@@ -22,6 +22,6 @@
     
 
 
-    <script src="clock.js"></script>
+    <script src="clook/clock.js"></script>
 </body>
 </html>
