--- a/clock.html
+++ b/clock.html
@@ -9,8 +9,11 @@
 <body>
     <section class="home">
         <div class="clockApp">
-            <h3>clock</h3>
-            <input type="time">
+            <h1>Alarme</h1>
+            <h2></h2>
+            <!-- <h3>clock</h3> -->
+            <label for="time">+</label>
+            <input type="time" id="time" >
             <button>save</button>
             <audio src="WhatsApp Audio 2023-06-22 at 00.15.29.mp3"></audio>
             <ul>
