--- a/clock.html
+++ b/clock.html
@@ -15,6 +15,7 @@
             <!-- <h3>clock</h3> -->
             <label for="time">+</label>
             <input type="time" id="time" >
+              <input type="text" id="textValue">
             <button>save</button>
             <audio src="WhatsApp Audio 2023-06-22 at 00.15.29.mp3"></audio>
             <ul id="lu">
